Fix home page overflow issue

--- a/src/styles/pages/_index.scss
+++ b/src/styles/pages/_index.scss
@@ -1,3 +1,6 @@
+body{
+  overflow: hidden;
+}
 .page {
   display: block;
   width: 100%;
